--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -13,7 +13,7 @@
 
     <title>MNIST Digit Predictor</title>
   </head>
-  <body>
+  <body >
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -29,10 +29,20 @@
         <div class="col-md-6">
           <form>
             <div>
-              <canvas id="canvas" style="border: 1px solid black"></canvas>
+              <canvas id="canvas" style="border: 1px solid black" height="112" width="112"></canvas>
             </div>
             <div class="form-group">
-              <button type="predict" id="predictButton" class="btn btn-primary">Predict</button>
+              <form method=POST>
+                <button type="predict" id="predictBtn" class="btn btn-primary" >Predict</button>
+            </form>
+            </div>
+            <div class="form-group">
+                <button type="clearCanvas" id="clearBtn" class="btn btn-primary" >Clear</button>
+            </div>
+            <div>
+              <textarea id="predictionText" rows="4" cols="30">
+                
+              </textarea>                
             </div>
           </form>
         </div>
@@ -46,7 +56,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- Script to generate random numbers in the form. -->
-    <script src="/static/generate.js"></script>
+    <!-- Script for drawing on canvas and passing image to the server -->
+    <script type="text/JavaScript" src="{{ url_for('static', filename='js/input.js')}}"></script>
+    <style type="text/css" src="{{ url_for('static', filename='css/style_sheet.css')}}"></style>
   </body>
 </html>
