--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -29,11 +29,13 @@
         <div class="col-md-6">
           <form>
             <div>
-              <canvas id="canvas" style="border: 1px solid black" height="112" width="112"></canvas>
+              <canvas id="canvas" style="border: 1px solid black" height="112" width="112">
+              Sorry, your browser is not supported!
+              </canvas>
             </div>
             <div class="form-group">
               <form method=POST>
-                <button type="predict" id="predictBtn" class="btn btn-primary" >Predict</button>
+                <button type="predict" id="predictBtn" class="btn btn-primary"  >Predict</button>
             </form>
             </div>
             <div class="form-group">
