Fixed issue with passing int64 by casting to a string, Now JS file is getting the prediction back from flask and displaying it on the webpage

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -42,9 +42,7 @@
                 <button type="clearCanvas" id="clearBtn" class="btn btn-primary" >Clear</button>
             </div>
             <div>
-              <textarea id="predictionText" rows="4" cols="30">
-                
-              </textarea>                
+              <label for="predictionText" id="predictionText">First Name</label><br>
             </div>
           </form>
         </div>
