Cleaned up files and folders of repo

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -42,7 +42,7 @@
                 <button type="clearCanvas" id="clearBtn" class="btn btn-primary" >Clear</button>
             </div>
             <div>
-              <label for="predictionText" id="predictionText">First Name</label><br>
+              <label for="predictionText" id="predictionText">Prediction:</label><br>
             </div>
           </form>
         </div>
